CSS spacing issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -54,7 +54,7 @@ main {
     flex-grow: 1;
 
     input[type='text'] {
-      padding-left: 0.7rem;
+      padding: 0 0 0 0.7rem;
       border-radius: 10px 0 0 10px;
       border: none;
       background-color: #fff;
